--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
     <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function() {
+            emailjs.init("P4Yo5khbH3y82p5ux");
+        })();
+    </script>
 </body>
 </html> 
